--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,7 @@ name: Update README with GitHub Stats
 on:
   schedule:
     # Define a frequência de atualização (por exemplo, diariamente)
-    - cron: '0 * * * *'
+    - cron: '* * * * *'
 
 jobs:
   update-readme:
