--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,21 +11,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Generate GitHub Stats
+      - name: Update GitHub Stats in README
         run: |
-          STATS=$(curl -s "https://github-readme-stats.vercel.app/api?username=MateusSKV9&theme=radical&show_icons=true&rank_icon=percentile")
-          echo "$STATS"
+          # Baixa o README existente
+          curl -O README.md
 
-      - name: Update README
-        run: |
-          # Adiciona as estatísticas ao final do README.md existente
-          STATS_URL="![GitHub Stats](https://github-readme-stats.vercel.app/api?username=MateusSKV9&theme=radical&show_icons=true&rank_icon=percentile)"
-          echo "$STATS_URL" >> README.md
+          # Substitui os URLs das imagens das estatísticas no README.md
+          sed -i 's|https://github-readme-stats.vercel.app/api?username=mateusskv9&theme=radical&show_icons=true&rank_icon=percentile|https://github-readme-stats.vercel.app/api?username=MateusSKV9&theme=radical&show_icons=true&rank_icon=percentile|g' README.md
+          sed -i 's|https://github-readme-stats.vercel.app/api/top-langs/?username=mateusskv9&theme=radical&layout=compact|https://github-readme-stats.vercel.app/api/top-langs/?username=MateusSKV9&theme=radical&layout=compact|g' README.md
+          sed -i 's|https://github-readme-activity-graph.vercel.app/graph?username=mateusskv9&bg_color=141321&color=f5f6fa&line=F34089&point=F34089&area=false&hide_border=true&radius=8|https://github-readme-activity-graph.vercel.app/graph?username=MateusSKV9&bg_color=141321&color=f5f6fa&line=F34089&point=F34089&area=false&hide_border=true&radius=8|g' README.md
 
       - name: Commit changes
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@users.noreply.github.com'
           git add README.md
-          git commit -m 'Updated README with GitHub Stats'
+          git commit -m 'Updated GitHub stats in README'
           git push
